Add flag for compiling with Java 21